# LLM-Web-Trainer

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: README.ko.md  eval.py  pyproject.toml  train.py
backend/models/: modeling_gpt.py
backend/scripts/: download_tiny_shakespeare.sh  format.sh  install_poetry.sh  test.sh
backend/tests/: conftest.py
backend/tests/models/: test_gpt.py
backend/utils/: fineweb.py  hellaswag.py
