[project]
name = "llm-web-trainer"
version = "0.1.0"
description = ""
authors = [
    {name = "limJhyeok",email = "ljh6887@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
ipykernel = "^6.29.5"
ruff = "^0.9.3"
pytest = "^8.3.4"
coverage = "^7.6.10"
